# llm-router

./: .env.example  .gitignore  README.md  alembic.ini  config.example.yaml  config.py  config.yaml  main.py  pyproject.toml
core/: analyzer.py  classifier.py  config.py  recorder.py
models/: request.py
providers/: anthropic.py  base.py  groq.py  ollama.py  openai.py
router/: fallback.py  proxy.py  selector.py
routes/: router.py
scripts/: analyze_dataset.py  suggest_rules.py
test/: test_analyzer.py
tests/: test_classifier.py  test_fallback.py  test_router.py
