[project]
name = "llm-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argparse>=1.4.0",
    "datasets>=4.8.4",
    "fastapi>=0.135.2",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "tiktoken>=0.12.0",
]
