[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-router"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.7.0",
    "datasets>=3.0.0",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[project.scripts]
llm-router = "main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["core", "providers", "router", "routes", "models"]
